--- a/css/style.css
+++ b/css/style.css
@@ -891,7 +891,6 @@ transform: translateY(-50%);
 .how-it-works .step img{
   width: 60px;
   height: 60px;
- 
 }
 .how-it-works .step h4{
   font-size: 22px;
@@ -910,14 +909,14 @@ transform: translateY(-50%);
   
 }
 .events::before{
-  content: url(/imgs/dots.png);
+  content: url(../imgs/dots.png);
   position: absolute;
   left: 0;
   bottom: 170px;
 
 }
 .events::after{
-  content: url(/imgs/dots.png);
+  content: url(../imgs/dots.png);
   position: absolute;
   top: 170px;
   right: 5px;
@@ -1028,7 +1027,7 @@ transform: translateY(-50%);
   
 }
 .pricing-plans::before{
-  content: url(./imgs/dots.png);
+  content: url(../imgs/dots.png);
   position: absolute;
   left: 0;
   bottom: 170px;
@@ -1036,7 +1035,7 @@ transform: translateY(-50%);
 
 }
 .pricing-plans::after{
-  content: url(./imgs/dots.png);
+  content: url(../imgs/dots.png);
   position: absolute;
   top: 170px;
   right: 5px;
@@ -1210,7 +1209,7 @@ transform: translateY(-50%);
 /* start stats */
 .stats{
   padding: var(--padding);
-  background-image: url(./imgs/stats.jpg);
+  background-image: url(../imgs/stats.jpg);
   background-size: cover;
   position: relative;
   z-index: 0;
@@ -1298,7 +1297,7 @@ transform: translateY(-50%);
 
 }
 .discount .text{  
-  background-image: url(./imgs/discount-background1.jpg);
+  background-image: url(../imgs/discount-background1.jpg);
   animation: change-background 15s infinite linear;
   position: relative;
   z-index: 0;
@@ -1308,10 +1307,10 @@ transform: translateY(-50%);
 }
 @keyframes change-background{
   0%, 100%{
-    background-image: url(./imgs/discount-background1.jpg);
+    background-image: url(../imgs/discount-background1.jpg);
   }
   50%{
-    background-image: url(./imgs/discount-background2.jpg);
+    background-image: url(../imgs/discount-background2.jpg);
   }
 }
 .discount .text::before{
@@ -1353,7 +1352,6 @@ transform: translateY(-50%);
 }
 .discount form{
   margin-top: 40px;
- 
 }
 .discount input,
 .discount textarea{
